Atualização com nomes corrigidos das imagens e links

--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-<<<<<<< HEAD
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Catálogo SPA Turbo</title>
-=======
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Catálogo B2B SPA Turbo</title>
->>>>>>> b88fdaa (Atualização visual com logo e layout centralizado)
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -85,19 +80,12 @@
 </head>
 <body>
   <header>
-<<<<<<< HEAD
-    <img src="logo-spa-turbo.png" alt="SPA Turbo" />
-    <div class="contato">
-      Em caso de dúvidas, entre em contato com o vendedor que lhe enviou este link.<br />
-      WhatsApp: (11) 99687-3840
-=======
     <div class="header-content">
       <img src="logo-spa-turbo.png" alt="SPA Turbo" />
       <div>
         <div><strong>CATÁLOGO B2B SPA TURBO</strong></div>
         <div>Lista exclusiva para revendedores e oficinas, válido somente para o mês de junho.<br>*Confira disponibilidade no ato da compra.</div>
       </div>
->>>>>>> b88fdaa (Atualização visual com logo e layout centralizado)
     </div>
   </header>
 
@@ -105,81 +93,17 @@
     Em caso de dúvidas, entre em contato com o vendedor que lhe enviou este link ou pelo WhatsApp: (11) 99687-3840.
   </div>
 
-<<<<<<< HEAD
-  <div class="categorias">
-    <div class="categoria">
-      <a href="acessórios.html">
-        <img src="categoria1.png" alt="Acessórios" />
-        <span>Acessórios</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="alimentacao-combustível.html">
-        <img src="categoria2.png" alt="Alimentação / Combustível" />
-        <span>Alimentação / Combustível</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="componentes-do-motor.html">
-        <img src="categoria3.png" alt="Componentes do Motor" />
-        <span>Componentes do Motor</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="ignicao-elétricos.html">
-        <img src="categoria4.png" alt="Ignição & Elétricos" />
-        <span>Ignição & Elétricos</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="instrumentos.html">
-        <img src="categoria5.png" alt="Instrumentos" />
-        <span>Instrumentos</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="kits-turbo.html">
-        <img src="categoria6.png" alt="Kits Turbo" />
-        <span>Kits Turbo</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="mangueiras-conexões.html">
-        <img src="categoria7.png" alt="Mangueiras & Conexões" />
-        <span>Mangueiras & Conexões</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="suspensao-e-freios.html">
-        <img src="categoria8.png" alt="Suspensão e Freios" />
-        <span>Suspensão e Freios</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="térmicos.html">
-        <img src="categoria9.png" alt="Térmicos" />
-        <span>Térmicos</span>
-      </a>
-    </div>
-    <div class="categoria">
-      <a href="turbinas.html">
-        <img src="categoria10.png" alt="Turbinas" />
-        <span>Turbinas</span>
-      </a>
-    </div>
-=======
   <div class="container">
-    <div class="category-card"><img src="categoria1.jpg" alt="Categoria 1" /></div>
-    <div class="category-card"><img src="categoria2.jpg" alt="Categoria 2" /></div>
-    <div class="category-card"><img src="categoria3.jpg" alt="Categoria 3" /></div>
-    <div class="category-card"><img src="categoria4.jpg" alt="Categoria 4" /></div>
-    <div class="category-card"><img src="categoria5.jpg" alt="Categoria 5" /></div>
-    <div class="category-card"><img src="categoria6.jpg" alt="Categoria 6" /></div>
-    <div class="category-card"><img src="categoria7.jpg" alt="Categoria 7" /></div>
-    <div class="category-card"><img src="categoria8.jpg" alt="Categoria 8" /></div>
-    <div class="category-card"><img src="categoria9.jpg" alt="Categoria 9" /></div>
-    <div class="category-card"><img src="categoria10.jpg" alt="Categoria 10" /></div>
->>>>>>> b88fdaa (Atualização visual com logo e layout centralizado)
+    <div class="category-card"><a href="acessorios.html"><img src="acessorios.jpg" alt="Acessórios" /></a></div>
+    <div class="category-card"><a href="alimentacao-combustivel.html"><img src="alimentacao.jpg" alt="Alimentação / Combustível" /></a></div>
+    <div class="category-card"><a href="componentes-do-motor.html"><img src="componentes.jpg" alt="Componentes do Motor" /></a></div>
+    <div class="category-card"><a href="ignicao-eletricos.html"><img src="ignicao.jpg" alt="Ignição & Elétricos" /></a></div>
+    <div class="category-card"><a href="instrumentos.html"><img src="instrumentos.jpg" alt="Instrumentos" /></a></div>
+    <div class="category-card"><a href="kits-turbo.html"><img src="kits-turbo.jpg" alt="Kits Turbo" /></a></div>
+    <div class="category-card"><a href="mangueiras-conexoes.html"><img src="mangueiras.jpg" alt="Mangueiras & Conexões" /></a></div>
+    <div class="category-card"><a href="suspensao-e-freios.html"><img src="suspensao.jpg" alt="Suspensão e Freios" /></a></div>
+    <div class="category-card"><a href="termicos.html"><img src="termicos.jpg" alt="Térmicos" /></a></div>
+    <div class="category-card"><a href="turbinas.html"><img src="turbinas.jpg" alt="Turbinas" /></a></div>
   </div>
 
   <footer>
