--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -9,51 +10,46 @@
       font-family: Arial, sans-serif;
       margin: 0;
       background-color: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
     header {
-      width: 100%;
       background-color: #000;
       color: white;
       padding: 10px 20px;
       display: flex;
-      justify-content: center;
-    }
-    .header-content {
-      max-width: 60%;
-      display: flex;
+      justify-content: space-between;
       align-items: center;
     }
-    .header-content img {
+    header img {
       height: 40px;
-      margin-right: 20px;
+    }
+    .header-text {
+      text-align: right;
+      font-size: 14px;
+    }
+    .header-text strong {
+      font-size: 16px;
+      display: block;
     }
     .info-bar {
       width: 100%;
       background-color: #001a71;
       color: white;
       padding: 10px 0;
-      text-align: left;
+      text-align: center;
       font-size: 14px;
-      box-sizing: border-box;
-      padding-left: 20%;
-    }
-    .info-bar strong {
-      font-size: 16px;
-      text-transform: uppercase;
     }
     .container {
-      width: 60%;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      width: 90%;
+      max-width: 1600px;
+      margin: 30px auto;
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
       gap: 20px;
-      margin: 20px auto;
+      justify-items: center;
     }
     .category-card {
-      width: 300px;
+      width: 100%;
+      max-width: 300px;
       height: 400px;
       background-color: white;
       border-radius: 8px;
@@ -80,12 +76,11 @@
 </head>
 <body>
   <header>
-    <div class="header-content">
-      <img src="logo-spa-turbo.png" alt="SPA Turbo" />
-      <div>
-        <div><strong>CATÁLOGO B2B SPA TURBO</strong></div>
-        <div>Lista exclusiva para revendedores e oficinas, válido somente para o mês de junho.<br>*Confira disponibilidade no ato da compra.</div>
-      </div>
+    <img src="logo-spa-turbo.png" alt="SPA Turbo" />
+    <div class="header-text">
+      <strong>CATÁLOGO B2B SPA TURBO</strong>
+      Lista exclusiva para revendedores e oficinas, válido somente para o mês de junho.<br>
+      *Confira disponibilidade no ato da compra.
     </div>
   </header>
 
