--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
       margin: 0;
       background-color: #f5f5f5;
     }
+    .main-container {
+      width: 90%;
+      max-width: 1600px;
+      margin: 0 auto;
+    }
     header {
       background-color: #000;
       color: white;
-      padding: 10px 20px;
+      padding: 10px 0;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
     header img {
       height: 40px;
+      margin-left: 20px;
     }
     .header-text {
       text-align: right;
       font-size: 14px;
+      margin-right: 20px;
     }
     .header-text strong {
       font-size: 16px;
@@ -39,13 +46,11 @@
       font-size: 14px;
     }
     .container {
-      width: 90%;
-      max-width: 1600px;
-      margin: 30px auto;
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 20px;
       justify-items: center;
+      margin: 30px 0;
     }
     .category-card {
       width: 100%;
@@ -75,30 +80,32 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo-spa-turbo.png" alt="SPA Turbo" />
-    <div class="header-text">
-      <strong>CATÁLOGO B2B SPA TURBO</strong>
-      Lista exclusiva para revendedores e oficinas, válido somente para o mês de junho.<br>
-      *Confira disponibilidade no ato da compra.
+  <div class="main-container">
+    <header>
+      <img src="logo-spa-turbo.png" alt="SPA Turbo" />
+      <div class="header-text">
+        <strong>CATÁLOGO B2B SPA TURBO</strong>
+        Lista exclusiva para revendedores e oficinas, válido somente para o mês de junho.<br>
+        *Confira disponibilidade no ato da compra.
+      </div>
+    </header>
+
+    <div class="info-bar">
+      Em caso de dúvidas, entre em contato com o vendedor que lhe enviou este link ou pelo WhatsApp: (11) 99687-3840.
     </div>
-  </header>
 
-  <div class="info-bar">
-    Em caso de dúvidas, entre em contato com o vendedor que lhe enviou este link ou pelo WhatsApp: (11) 99687-3840.
-  </div>
-
-  <div class="container">
-    <div class="category-card"><a href="acessorios.html"><img src="acessorios.jpg" alt="Acessórios" /></a></div>
-    <div class="category-card"><a href="alimentacao-combustivel.html"><img src="alimentacao.jpg" alt="Alimentação / Combustível" /></a></div>
-    <div class="category-card"><a href="componentes-do-motor.html"><img src="componentes.jpg" alt="Componentes do Motor" /></a></div>
-    <div class="category-card"><a href="ignicao-eletricos.html"><img src="ignicao.jpg" alt="Ignição & Elétricos" /></a></div>
-    <div class="category-card"><a href="instrumentos.html"><img src="instrumentos.jpg" alt="Instrumentos" /></a></div>
-    <div class="category-card"><a href="kits-turbo.html"><img src="kits-turbo.jpg" alt="Kits Turbo" /></a></div>
-    <div class="category-card"><a href="mangueiras-conexoes.html"><img src="mangueiras.jpg" alt="Mangueiras & Conexões" /></a></div>
-    <div class="category-card"><a href="suspensao-e-freios.html"><img src="suspensao.jpg" alt="Suspensão e Freios" /></a></div>
-    <div class="category-card"><a href="termicos.html"><img src="termicos.jpg" alt="Térmicos" /></a></div>
-    <div class="category-card"><a href="turbinas.html"><img src="turbinas.jpg" alt="Turbinas" /></a></div>
+    <div class="container">
+      <div class="category-card"><a href="acessorios.html"><img src="acessorios.jpg" alt="Acessórios" /></a></div>
+      <div class="category-card"><a href="alimentacao-combustivel.html"><img src="alimentacao.jpg" alt="Alimentação / Combustível" /></a></div>
+      <div class="category-card"><a href="componentes-do-motor.html"><img src="componentes.jpg" alt="Componentes do Motor" /></a></div>
+      <div class="category-card"><a href="ignicao-eletricos.html"><img src="ignicao.jpg" alt="Ignição & Elétricos" /></a></div>
+      <div class="category-card"><a href="instrumentos.html"><img src="instrumentos.jpg" alt="Instrumentos" /></a></div>
+      <div class="category-card"><a href="kits-turbo.html"><img src="kits-turbo.jpg" alt="Kits Turbo" /></a></div>
+      <div class="category-card"><a href="mangueiras-conexoes.html"><img src="mangueiras.jpg" alt="Mangueiras & Conexões" /></a></div>
+      <div class="category-card"><a href="suspensao-e-freios.html"><img src="suspensao.jpg" alt="Suspensão e Freios" /></a></div>
+      <div class="category-card"><a href="termicos.html"><img src="termicos.jpg" alt="Térmicos" /></a></div>
+      <div class="category-card"><a href="turbinas.html"><img src="turbinas.jpg" alt="Turbinas" /></a></div>
+    </div>
   </div>
 
   <footer>
