--- a/instrumentos.html
+++ b/instrumentos.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Acessorios | SPA Turbo</title>
+  <title>Instrumentos | SPA Turbo</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <h1>Acessorios</h1>
+  <h1>Instrumentos</h1>
   <div class="grid">
     <div class="card">
       <img src="https://via.placeholder.com/200x200?text=Produto+1" alt="Produto Fictício 1">
