--- a/index.html
+++ b/index.html
@@ -1,218 +1,115 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>Catálogo SPA Turbo B2B</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Catálogo B2B SPA Turbo</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; padding: 0; }
-    header, footer { background: #001a71; color: #fff; text-align: center; padding: 18px 0; }
-    .categorias, .produtos { max-width: 1240px; margin: 32px auto; padding: 0 16px; }
-    .grid-categorias {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 28px;
-      justify-items: center;
-      align-items: stretch;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f5f5f5;
     }
-    .categoria-card {
-      background: #fff;
-      border-radius: 14px;
-      box-shadow: 0 1px 8px #001a711a;
-      text-align: center;
-      cursor: pointer;
-      padding: 10px 8px 14px 8px;
-      transition: box-shadow .17s, transform .17s;
+    .main-container {
+      width: 90%;
+      max-width: 1600px;
+      margin: 0 auto;
+    }
+    header {
+      background-color: #000;
+      color: white;
+      padding: 10px 0;
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
     }
-    .categoria-card:hover {
-      box-shadow: 0 4px 16px #001a7138;
-      transform: translateY(-3px) scale(1.04);
-      background: #eef4ff;
+    header img {
+      height: 40px;
+      margin-left: 20px;
     }
-    .categoria-card img {
+    .header-text {
+      text-align: right;
+      font-size: 14px;
+      margin-right: 20px;
+    }
+    .header-text strong {
+      font-size: 16px;
+      display: block;
+    }
+    .info-bar {
       width: 100%;
-      max-width: 400px;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 12px;
-      background: #e8e8e8;
+      background-color: #001a71;
+      color: white;
+      padding: 10px 0;
+      text-align: center;
+      font-size: 14px;
     }
-    .categoria-nome {
-      font-size: 1.2rem;
-      font-weight: bold;
-      color: #001a71;
-      margin-top: 6px;
-      letter-spacing: 0.5px;
-    }
-    .produtos-header {
-      display: flex;
-      align-items: center;
-      gap: 18px;
-      margin-bottom: 22px;
-    }
-    .btn-voltar {
-      background: #001a71;
-      color: #fff;
-      border: none;
-      border-radius: 22px;
-      padding: 12px 26px;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-bottom: 10px;
-      transition: background 0.17s;
-    }
-    .btn-voltar:hover { background: #00318b; }
-    .grid-produtos {
+    .container {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+      grid-template-columns: repeat(5, 1fr);
       gap: 20px;
-      justify-items: stretch;
+      justify-items: center;
+      margin: 30px 0;
     }
-    .product-card {
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 1px 8px #0001;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px 8px 16px 8px;
-      text-align: center;
-      height: 100%;
-      transition: box-shadow .15s, transform .14s;
-    }
-    .product-card:hover { box-shadow: 0 6px 20px #001a7122; transform: scale(1.03);}
-    .product-card img {
+    .category-card {
       width: 100%;
-      max-width: 135px;
-      height: 110px;
-      object-fit: contain;
-      border-radius: 7px;
-      margin-bottom: 8px;
-      background: #f2f2f2;
+      max-width: 300px;
+      height: 400px;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      overflow: hidden;
+      text-align: center;
+      font-weight: bold;
     }
-    .product-name { font-size: 1rem; font-weight: bold; margin: 4px 0 3px 0; color: #001a71;}
-    .product-price { font-size: 1.03rem; color: #178430; font-weight: 600; margin: 2px 0 0 0;}
-    @media (max-width: 850px) {
-      .grid-categorias, .grid-produtos { gap: 12px; }
-      .categoria-card img { height: 140px;}
-      .product-card img { max-width: 90px; height: 60px;}
+    .category-card img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
-    @media (max-width: 600px) {
-      header, footer { font-size: 1rem; padding: 12px 0;}
-      .categorias, .produtos { margin: 14px auto;}
-      .categoria-card img { height: 95px;}
-      .categoria-nome { font-size: 1rem; }
-      .product-card img { max-width: 75px; height: 48px;}
+    footer {
+      width: 100%;
+      background-color: #000;
+      color: white;
+      text-align: center;
+      font-size: 14px;
+      padding: 15px 0;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Catálogo SPA Turbo B2B</h1>
-  </header>
+  <div class="main-container">
+    <header>
+      <img src="logo-spa-turbo.png" alt="SPA Turbo" />
+      <div class="header-text">
+        <strong>CATÁLOGO B2B SPA TURBO</strong>
+        Lista exclusiva para revendedores e oficinas, válido somente para o mês de junho.<br>
+        *Confira disponibilidade no ato da compra.
+      </div>
+    </header>
 
-  <div class="categorias" id="categorias">
-    <div class="grid-categorias">
-      <div class="categoria-card" data-categoria="Acessórios">
-        <img src="acessorios.jpg" alt="Acessórios">
-        <div class="categoria-nome">Acessórios</div>
-      </div>
-      <div class="categoria-card" data-categoria="Alimentação Ar/Combustível">
-        <img src="alimentacao.jpg" alt="Alimentação Ar/Combustível">
-        <div class="categoria-nome">Alimentação / Combustível</div>
-      </div>
-      <div class="categoria-card" data-categoria="Componentes de motor">
-        <img src="componentes.jpg" alt="Componentes de Motor">
-        <div class="categoria-nome">Componentes de Motor</div>
-      </div>
-      <div class="categoria-card" data-categoria="Ignição e componentes elétricos">
-        <img src="ignicao.jpg" alt="Ignição e Componentes Elétricos">
-        <div class="categoria-nome">Ignição e Elétricos</div>
-      </div>
-      <div class="categoria-card" data-categoria="Instrumentos">
-        <img src="instrumentos.jpg" alt="Instrumentos">
-        <div class="categoria-nome">Instrumentos</div>
-      </div>
-      <div class="categoria-card" data-categoria="Kits Turbo e Componentes">
-        <img src="kits-turbo.jpg" alt="Kits Turbo e Componentes">
-        <div class="categoria-nome">Kits Turbo</div>
-      </div>
-      <div class="categoria-card" data-categoria="Mangueiras e Conexões">
-        <img src="mangueiras.jpg" alt="Mangueiras e Conexões">
-        <div class="categoria-nome">Mangueiras e Conexões</div>
-      </div>
-      <div class="categoria-card" data-categoria="Suspensão, Transmissão e Freios">
-        <img src="suspensao.jpg" alt="Suspensão, Transmissão e Freios">
-        <div class="categoria-nome">Suspensão e Freios</div>
-      </div>
-      <div class="categoria-card" data-categoria="Térmicos">
-        <img src="termicos.jpg" alt="Térmicos">
-        <div class="categoria-nome">Térmicos</div>
-      </div>
-      <div class="categoria-card" data-categoria="Turbinas">
-        <img src="turbinas.jpg" alt="Turbinas">
-        <div class="categoria-nome">Turbinas</div>
-      </div>
+    <div class="info-bar">
+      Em caso de dúvidas, entre em contato com o vendedor que lhe enviou este link ou pelo WhatsApp: (11) 99687-3840.
     </div>
-  </div>
 
-  <div class="produtos" id="produtos" style="display:none">
-    <div class="produtos-header">
-      <button class="btn-voltar" onclick="voltarCategorias()">← Voltar às Categorias</button>
-      <h2 id="tituloCategoria" style="margin:0; font-size:1.2em; color:#001a71;"></h2>
+    <div class="container">
+      <div class="category-card"><a href="acessorios.html"><img src="acessorios.jpg" alt="Acessórios" /></a></div>
+      <div class="category-card"><a href="alimentacao-combustivel.html"><img src="alimentacao.jpg" alt="Alimentação / Combustível" /></a></div>
+      <div class="category-card"><a href="componentes-do-motor.html"><img src="componentes.jpg" alt="Componentes do Motor" /></a></div>
+      <div class="category-card"><a href="ignicao-eletricos.html"><img src="ignicao.jpg" alt="Ignição & Elétricos" /></a></div>
+      <div class="category-card"><a href="instrumentos.html"><img src="instrumentos.jpg" alt="Instrumentos" /></a></div>
+      <div class="category-card"><a href="kits-turbo.html"><img src="kits-turbo.jpg" alt="Kits Turbo" /></a></div>
+      <div class="category-card"><a href="mangueiras-conexoes.html"><img src="mangueiras.jpg" alt="Mangueiras & Conexões" /></a></div>
+      <div class="category-card"><a href="suspensao-e-freios.html"><img src="suspensao.jpg" alt="Suspensão e Freios" /></a></div>
+      <div class="category-card"><a href="termicos.html"><img src="termicos.jpg" alt="Térmicos" /></a></div>
+      <div class="category-card"><a href="turbinas.html"><img src="turbinas.jpg" alt="Turbinas" /></a></div>
     </div>
-    <div class="grid-produtos" id="gridProdutos"></div>
   </div>
 
   <footer>
-    SPA Performance Turbo — Catálogo B2B
+    Em caso de dúvidas, entre em contato com o vendedor que lhe enviou este link.
   </footer>
-
-  <script>
-    let dados = [];
-    fetch('catalogo_b2b.json').then(r=>r.json()).then(json => { dados = json; });
-
-    document.querySelectorAll('.categoria-card').forEach(card => {
-      card.onclick = () => {
-        const categoria = card.getAttribute('data-categoria');
-        mostrarProdutos(categoria);
-      };
-    });
-
-    function mostrarProdutos(categoria) {
-      document.getElementById('categorias').style.display = 'none';
-      document.getElementById('produtos').style.display = 'block';
-      document.getElementById('tituloCategoria').innerText = categoria;
-      const produtos = dados.filter(p => (p._NomeDepartamento || '') === categoria);
-      let html = '';
-      produtos.forEach(prod => {
-        // Prefixa o caminho se não for link completo
-        const urlImg = (prod.image && !prod.image.startsWith('http')) 
-          ? `https://www.spaturbo.com.br/arquivos/${prod.image}` 
-          : prod.image || 'https://via.placeholder.com/135x110?text=SEM+IMAGEM';
-        html += `
-          <div class="product-card">
-            <a href="${prod.link}" target="_blank">
-              <img src="${urlImg}" alt="${prod.name}" />
-              <div class="product-name">${prod.name}</div>
-              <div class="product-price">R$ 999,90</div>
-            </a>
-          </div>
-        `;
-      });
-      document.getElementById('gridProdutos').innerHTML = html || "<p style='grid-column: 1/-1; text-align:center;'>Nenhum produto encontrado.</p>";
-      window.scrollTo(0,0);
-    }
-
-    function voltarCategorias() {
-      document.getElementById('produtos').style.display = 'none';
-      document.getElementById('categorias').style.display = 'block';
-      window.scrollTo(0,0);
-    }
-  </script>
 </body>
 </html>
